--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@
 title: Css Advanced 2
 email: viki@example.com
 description: Simple description
+destination: docs
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: viki.viki
